--- a/dep/mailer/gmail/tmpl/verify_otp.html
+++ b/dep/mailer/gmail/tmpl/verify_otp.html
@@ -27,7 +27,7 @@
                                             <p style="padding-bottom: 16px">You have requested for a One-Time Password (OTP).</p>
                                             <p style="padding-bottom: 16px"><strong style="font-size: 130%">{{.otp}}</strong></p>
                                             <p style="padding-bottom: 16px">If you did not request this, you can ignore this email.</p>
-                                            <p>Sincerly,<br>Bytewise</p>
+                                            <p>Sincerely,<br>Bytewise</p>
                                         </div>
                                     </div>
                                     <div style="color: rgb(153, 153, 153); text-align: center;">
