--- a/dep/mailer/gmail/tmpl/verify_otp.html
+++ b/dep/mailer/gmail/tmpl/verify_otp.html
@@ -19,8 +19,8 @@
                                 <td>
                                     <div style="padding: 30px; background-color: rgb(255, 255, 255);">
                                         <div>
-                                            <img src="https://lh3.googleusercontent.com/pw/ADCreHdHHw7iuF5Q1U6ED-oRVmzsI1OsKTO43Gl-s1vcxXQR1-fJKjgxBNDquLBhUPOK7udxZ1Rp31PHadCVYQmUt7lndJNu4W6vNMe0RvX7pCgu_EcKzK2vvE5oJSKYeGysWf8j119_uiz3Y7bCCejEqlYdSkp1mZ_xXvkB_OGXOF_l4lAutIN0IvFAXw5-p6WSNWJ6vYzfzqzkLirjpk6yul8k59nxnoNDI9KWew0mVE6tOThp3xG9BC-X5I3C7fYPx6SVtM9bKD4qYtq4oVG2GNLkneBbeF3JXyhM002F2gx827J6bpIkLL2KAJitGUb5vVn9N2glQVzNWQZNEJBz-WectbmPQBGqIy2Ej04H-0mcq4bmLM7jk8gUUczyd2sAkkqVmY3Hcauna8ey3f5Zh8ZezFcaDO40yablDGDAl-Gx-0C5BiTEQ5n-9ZpupxqBHrBtTnJV6HGBJ8ZC-ZzAmQjM92J6qe-fgqCmeKyqfacCCjkNgTG3mg7BJ8O0zGmMjR3JGFCUa3Cjsx-pV1pb5L96OIECREpMae_QCf66Tfw5z2rG3UYljKanqw4lHBU5UwhjzpZQ0pBFlWz7C0hxqQ-b8sMHrZ3Q6q0c_SvVU8aWUOh0Ig60JueNhMKWsdxBWXhx8aigiw-1zbinnISV0jxr1qalPOptEJRJZ96GtdyHKZRLX15__T3tvegzHSjvTb76o6R3JG6baPa1V6ZAUbz6L4Vr3dEjfD-YW1x0uV2NmwVEQO5dzRklAC3iFs2KfrNqp7-rwe77jubaqh5Mau9vwddd2c21OrPTKBHoPdEgQyJT22qh1HeBOdvqYpxWTpNgFT4tEjMP8BcjUYcvoqpwIReA2V-bqill4Rpqsxid0TPqCDIjElrNoLDOQPCtrtaFSZh2Q3DZgqFb9HlY=w180-h74-s-no?authuser=0"
-                                                alt="logo" title="logo" style="display:block; margin-left: auto; margin-right: auto">
+                                            <img src="https://drive.google.com/uc?id=1WQK3SfYk4fnnL2CzRfy0X69dmaIA-QNX"
+                                                alt="logo" title="logo" style="display:block; margin-left: auto; margin-right: auto; width: 200px">
                                         </div>
                                         <div style="color: rgb(0, 0, 0); text-align: left; font-size: 18px">
                                             <p>Hello,</p>
